--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 def keysPropertiesFile = rootProject.file("github.properties")
 def keysProperties = new Properties()
 keysProperties.load(new FileInputStream(keysPropertiesFile))
@@ -18,6 +20,9 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+    dataBinding {
+        enabled true
     }
     buildTypes {
         debug {
