--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,9 @@ android {
             buildConfigField 'String', "GithubClientSecret", keysProperties['GithubClientSecret']
         }
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
@@ -44,7 +47,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
@@ -53,6 +55,8 @@ dependencies {
 
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
+
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -61,4 +65,10 @@ dependencies {
     implementation "androidx.paging:paging-runtime:$lifecycle_version"
 
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+
+    testImplementation 'junit:junit:4.12'
+    testImplementation "org.koin:koin-test:$koin_version"
+    testImplementation "com.squareup.okhttp3:mockwebserver:$okhttp_version"
+    testImplementation "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
+
 }
