--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     ext.lifecycle_version = '2.1.0'
     ext.retrofit_version = '2.6.0'
     ext.koin_version = '2.0.1'
+    ext.okhttp_version = '3.12.1'
 
     ext.kotlin_version = '1.3.61'
     repositories {
